--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -13,3 +13,6 @@ user.not.found.or.disabled = FOYDALANUVCHI TOPILMADI YOKI YAROQSIZ
 error = XATOLIK
 cannot.block = O'ZINGIZDAN ESKI ADMINNI BLOKLAY OLMAYSIZ
 cannot.edit = O'ZINGIZDAN ESKI ADMINNI TAHRIRLAY OLMAYSIZ
+forbidden.exception = FORBIDDEN (SIZDA BU YO'LGA RUXSAT YO'Q)
+path.not.found = YO'L TOPILMADI
+server.error = SERVERDA XATOLIK
