--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,3 +13,6 @@ user.not.found.or.disabled = USER NOT FOUND OR DISABLED
 error = ERROR
 cannot.block = YOU CANNOT BLOCK OLD ADMIN 
 cannot.edit = YOU CANNOT EDIT OLD ADMIN 
+forbidden.exception = FORBIDDEN (YOU HAVE NOT ACCESS TO THIS PATH)
+path.not.found = PATH NOT FOUND
+server.error = ERROR IN SERVER
