Kop ishla bob ketti

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,3 +16,5 @@ cannot.edit = YOU CANNOT EDIT OLD ADMIN
 forbidden.exception = FORBIDDEN (YOU HAVE NOT ACCESSED TO THIS PATH)
 path.not.found = PATH NOT FOUND
 server.error = ERROR IN SERVER
+accepted = ACCEPTED
+rejected = REJECTED
