--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -11,8 +11,10 @@ mismatch.passwords = MISMATCH PASSWORD AND PRE-PASSWORD
 user.already.registered = USER ALREADY REGISTERED
 user.not.found.or.disabled = USER NOT FOUND OR DISABLED
 error = ERROR
-cannot.block = YOU CANNOT BLOCK OLD ADMIN 
-cannot.edit = YOU CANNOT EDIT OLD ADMIN 
+cannot.block = YOU CANNOT BLOCK OLD ADMIN
+cannot.edit = YOU CANNOT EDIT OLD ADMIN
 forbidden.exception = FORBIDDEN (YOU HAVE NOT ACCESS TO THIS PATH)
 path.not.found = PATH NOT FOUND
 server.error = ERROR IN SERVER
+accepted = ACCEPTED
+rejected = REJECTED
