--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -16,3 +16,5 @@ cannot.edit = O'ZINGIZDAN ESKI ADMINNI TAHRIRLAY OLMAYSIZ
 forbidden.exception = FORBIDDEN (SIZDA BU YO'LGA RUXSAT YO'Q)
 path.not.found = YO'L TOPILMADI
 server.error = SERVERDA XATOLIK
+accepted = QABUL QILINDI
+rejected = RAD ETILDI
